Fix spacing formModal

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -55,3 +55,6 @@
     font-size: 20px;
 }
 
+.formModal {
+    margin-bottom: 8px;
+}
